--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,9 @@ html * {
 /* Displayed word block */
 .displayed-word-container {
   grid-area: w;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .displayed-word {
   display: flex;
@@ -152,6 +155,10 @@ html * {
 
 .hangman-img {
   grid-area: i;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 /* Keyboard */
@@ -159,7 +166,7 @@ html * {
   grid-area: k;
   display: grid;
   grid-template-columns: repeat(9, 1fr);
-  margin: 1%;
+  width: 100%;
 }
 .key {
   display: flex;
@@ -169,9 +176,9 @@ html * {
 
 }
 .key > div {
-  font-size: 30px;
+  font-size: 4vh;
   font-weight: bold;
-  margin: 10px;
+  margin: 5px;
   border: 3px solid rgb(80, 79, 78);
   background-color: rgb(107, 109, 109);
   color: antiquewhite;
@@ -183,7 +190,7 @@ html * {
   align-items: center;
 }
 .notPressed > div:hover {
-  font-size: 25px;
+  font-size: 3vh;
   height: 80%;
   width: 80%;
 
